[package]
name = "ruffle_gc_arena"
version = "0.0.0"
description = "Temporary, internal gc-arena facade for Ruffle"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
gc-arena = { git = "https://github.com/kyren/gc-arena.git", features = ["hashbrown"], rev = "afe6b0619e976f85934f44224135c9d30443d294" }
